// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Break Converter oboToSlate converts an OboNode to a Slate node 1`] = `
Object {
  "data": Object {
    "content": Object {
      "width": "large",
    },
  },
  "key": "mockKey",
  "object": "block",
  "type": "mockType",
}
`;

exports[`Break Converter slateToObo converts a Slate node to an OboNode with content 1`] = `
Object {
  "children": Array [],
  "content": Object {
    "width": undefined,
  },
  "id": "mockKey",
  "type": "mockType",
}
`;
